<resources>
    <string name="app_name">Learn to Earn</string>
    <string name="btn_learn_to_earn">Learn to Earn!</string>
    <string name="desc">Image</string>
    <string name="button_login">Log In</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_forgot_password">Forgot a password?</string>
    <string name="image_google">Image</string>
    <string name="button_reg_learntoearn">Learn to Earn!</string>
    <string name="button_gog" />
    <string name="title_activity_login">Sign in Log In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button_acc">account</string>
    <string name="button_gmail_log">Log in using Gmail</string>
    <string name="description">Image</string>
    <string name="usersname"></string>
    <string name="usersname1">Имя:</string>
    <string name="email"></string>
    <string name="email1">Почта:</string>
    <string name="button_log">Log</string>
    <string name="current_result">#дней</string>
    <string name="current_result1"> Текущий рекорд</string>
    <string name="personal_result">#дней</string>
    <string name="personal_result1">Личный рекорд</string>
    <string name="notification">Уведомления о занятиях</string>
    <string name="circle">AppCompatImageView</string>
    <string name="general_settings">Общие настройки</string>
    <string name="profile_settings">Настройки профиля</string>
    <string name="education_settings">Настройки обучения</string>
    <string name="change_photo">Изменить фотографию</string>
    <string name="change_name">Изменить имя</string>
    <string name="add_notofications">Добавить уведомления</string>
    <string name="change_grade">Выбор класса обучения</string>
    <string name="hello_text">Добро пожаловать!</string>
    <string name="log_out">Выйти из системы</string>
    <string name="name">Имя</string>
    <string name="namehint">Введите имя</string>
    <string name="surname">Фамилия</string>
    <string name="surnamehint">Введите фамилию</string>
    <string name="email2">Электронная почта</string>
    <string name="savebtn">Сохранить</string>
    <string name="email_address"></string>


</resources>
