<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oleoscript_regular"
        android:text="@string/btn_learn_to_earn"
        android:textColor="#000000"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:contentDescription="@string/desc"
        android:viewportWidth="240"
        android:viewportHeight="249"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/android_back" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="334dp"
        android:layout_height="46dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/button_login"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.574" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="334dp"
        android:layout_height="46dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/button_signup"
        android:textColor="#020202"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.668" />

    <Button
        android:id="@+id/button3"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/button_forgot_password"
        android:textColor="#0E0E0E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_signup"
        app:layout_constraintVertical_bias="0.178" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="66dp"
        android:layout_height="51dp"
        android:contentDescription="@string/image_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.343"
        app:srcCompat="@drawable/google_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>